--- a/package.json
+++ b/package.json
@@ -9,11 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.14",
     "@next/font": "13.1.6",
+    "@tailwindcss/forms": "^0.5.3",
+    "buffer": "^6.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "graceful-fs": "^4.2.10",
     "next": "13.1.6",
+    "node-fetch": "^3.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stream-browserify": "^3.0.0",
+    "swr": "^2.0.3",
+    "universal-cookie": "^4.0.4",
+    "url": "^0.11.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
